Added communication between services.
